--- a/helm/dagster/values.yaml
+++ b/helm/dagster/values.yaml
@@ -222,6 +222,7 @@ computeLogManager:
   #     container: ~
   #     secretCredential: ~
   #     defaultAzureCredential: ~
+  #     accessKeyOrSasToken: ~
   #     localDir: ~
   #     prefix: ~
   #     uploadInterval: ~
